--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -45,10 +45,10 @@ local_business_type = ""
 
 # Organization name (optional)
 # Enter an organization or project name. Defaults to the site title from `config.toml`.
-org_name = ""
+org_name = "Holly Bossart"
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = "Holly Bossart"
+description = "Holly Bossart's personal website"
 
 ############################
 ## Site Features
