--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,7 +88,7 @@ show_related = {docs = false, page = false, post = true, project = true, publica
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "hbossart@stat.cmu.edu"
+email = ""
 phone = ""
 
 # Address
@@ -273,7 +273,7 @@ plugins_js  = []
   #   3: OpenStreetMap (Mapbox)
   engine = 2
   api_key = ""
-  zoom = 12
+  zoom = 14
 
 ############################
 ## Marketing
