adding email back in

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,7 +88,7 @@ show_related = {docs = false, page = false, post = true, project = true, publica
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = ""
+email = "hbossart@stat.cmu.edu"
 phone = ""
 
 # Address
