--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,13 +4,13 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "About Me"
   url = "#about"
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Curriculum Vitae"
+  url = "files/cv.pdf"
   weight = 20
 
 [[main]]
