--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,15 +13,10 @@
   url = "files/cv.pdf"
   weight = 20
 
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
-
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
+# [[main]]
+#  name = "Publications"
+#  url = "#publications"
+#  weight = 30
 
 [[main]]
   name = "Contact"
